--- a/css/main.css
+++ b/css/main.css
@@ -1394,5 +1394,5 @@ img {
   position: relative;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%);
+  transform: translate(-50%, -280px);
 }/*# sourceMappingURL=main.css.map */
